--- a/templates/HEMAUI_Failpage.html
+++ b/templates/HEMAUI_Failpage.html
@@ -4,11 +4,11 @@
 <head>
 
     <title>HEMA Alliance</title>
-    <link rel = "stylesheet" href = "css/homepage_style.css" />
+    <link rel = "stylesheet" href = "../static/failpage_style.css" />
 </head>
 
 <header class="container" >
-	<a href="https://www.hemaalliance.com/"><img class="resize_fit_center" src="img/logo.png" ></img>
+	<a href="https://www.hemaalliance.com/"><img class="resize_fit_center" src="img/logo.png" >
 	</a>
 </header>
 
@@ -17,19 +17,18 @@
             <h1>Membership Checker</h1>
 		    <form method="post" name="post">
 		    	<input id="csrf_token" name="csrf_token" type="hidden" value="IjRkYzUwYzU1YTRkZTAwZmU0Njc3NjUxMmNjMGVjYzg2ZGQ0OGVhNmMi.EU_wzQ.zyHJiKbyVEsTpBrWmZFBG7VGH_Y">
+
+                <div id="message">
+				    <p> Email@example.com, is not currently a HEMA Alliance Member </p>
+			    </div>
+
 				<div id="input_container">
-					<div id="input">
-						<div id="email_input">
-							<input id="email" maxlength="128" name="email" placeholder="email@example.com" size="30" type="text" value="">
-						</div>
-					</div>
-					<input type="submit" value="Verify Membership">
+                    <button type="button back-button" id="button1" >Back</button>
+                    <button type="button member-button" id="button2">Become Member</button>
 
 				</div><!--input container -->
 			</form>
-			<div id="message">
-				<p>Please input an email to check on their HEMAA membership status</p>
-			</div>
+
 		</section> <!-- member_checker -->
 </div>
 
