--- a/static/confirmationpage_style.css
+++ b/static/confirmationpage_style.css
@@ -35,9 +35,20 @@ h1 {
 }
 
 /*define the style of go back button*/
-input[type=submit] {
-    font-size: 1.6rem;
-    margin-top: 6rem;
+#button1{
+    letter-spacing: 1px;
+    padding: .25rem .5rem;
+    font-family: serif;
+    font-size: 1.5rem;
+    display: block;
+    background-color: #888B8D;
+    color: white;
+    border: none;
+    text-transform: uppercase;
+    display: inline-block;
+    margin: 1rem 0;
+    min-width: 320px;
+    /*text-transform: uppercase;*/
 }
 
 
