--- a/static/failpage_style.css
+++ b/static/failpage_style.css
@@ -26,28 +26,34 @@ h1 {
 }
 
 #button1{
-    background-color: #53565A;
-    width: 100px;
-    height: 40px;
     letter-spacing: 1px;
+    padding: .25rem .5rem;
     font-family: serif;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    display: block;
     background-color: #888B8D;
     color: white;
-    margin: 2rem 0;
+    border: none;
+    text-transform: uppercase;
+    display: inline-block;
+    margin: 1rem 0;
+    min-width: 320px;
     /*text-transform: uppercase;*/
 }
 
 #button2{
-    background-color: #53565A;
-    width: 150px;
-    height: 40px;
     letter-spacing: 1px;
+    padding: .25rem .5rem;
     font-family: serif;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    display: block;
     background-color: #888B8D;
     color: white;
-    margin: 2rem 0;
+    border: none;
+    text-transform: uppercase;
+    display: inline-block;
+    margin: 1rem 0;
+    min-width: 320px;
     /*text-transform: uppercase;*/
 }
 
